--- a/reset.css
+++ b/reset.css
@@ -46,3 +46,8 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+input, textarea{
+    outline: none !important; 
+	box-shadow: none !important;
+    
+  }
