--- a/style.css
+++ b/style.css
@@ -8,25 +8,34 @@ html {
 body{
     font-family: "dana" !important;
 }
-li .dad i {
-    width: 40px;
-    color: blue;
-    height: 0px;
-    display: none;
-    
+.navbar .nav-link{
+    position: relative;
 }
-li .dad:hover i {
-    display: block;
-    
+  
+ .dad::before{
+     content: "";
+     position: absolute;
+     width:0px;
+    height: 3px;
+    background: #0e49f1;
+    top: 0px;
+    left: 0px;
+    /* display: inline-block; */
+    transition: width 0.3s;
+ }
+ li:hover > .dad::before {
+     width: 100%;
+ }
+ .data.dad::before {
+ width: 100%;
 }
+ 
+
 li a:hover {
     color:rgb(76, 76, 179) !important;
+
 }
-li .data i {
-    height: 5px;
-    width: 105px;
-    
-}
+
 .h-1 {
     background-color:rgb(67, 98, 193);
     height: 300px;
@@ -102,5 +111,18 @@ li .data i {
   }
   .pbb {
       padding-bottom: 15rem;
+  }
+  .dark::before{
+    content: "";
+    position: absolute;
+    background: rgb(174, 180, 174);
+    width: 72%;
+    left: 5%;
+    top: -118px;
+    height: 32em;
+    opacity: 0.9;
+    margin-top: 155px;
+    z-index: 0;
+
   }
   
