--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
     font-size: 100%;
 }
 @font-face {
-    font-family: "";
+    font-family: "dana";
     src: url(./dana-medium\ \(2\).ttf);
 }
 body{
